manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-demo-web
  name: nginx-demo-web-svc
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-demo-web
