manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-web-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: nginxwebdemo.dclab.local
    http:
      paths:
      - backend:
          service:
            name: nginx-demo-web-svc
            port:
              number: 80
        path: /
        pathType: Prefix
